# Retro-Presence

./: Capture.py  Main.py  PYpresence.spec  README.md  imghash.py  pyproject.toml  requirements.txt
