[project]
name = "discordrichobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imagehash>=4.3.2",
    "numpy>=2.5.0",
    "obsws-python>=1.8.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyinstaller>=6.21.0",
    "pypresence>=4.6.1",
]
